add class container, jumbotron, paragraphs and mid-title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
   </head>
   <body>
     <div class="navbar">
-      <img src="" alt="">
+      <img src="images/kentenavbar.jpg" alt="">
+    </div>
+    <div class="container">
+      <div class="jumbotron">
+        <p>
+          An <strong><em>Akan</em></strong> name in Ghanian naming culture is a name given to people according to the day of the week they were born
+        </p>
+        <p>
+          Enter your birthday (Date of Birth) details below to find out your Akan name...
+        </p>
+      </div>
+
+      <div class="mid-title">
+        <p>
+          <strong>Get to know your Akan name:</strong>
+        </p>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-6">
+          <div class="jumbotron">
+
+          </div>
+        </div>
+      </div>
+
     </div>
    
   </body>
