add form name, label and input to index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
       <div class="row">
         <div class="col-12 col-sm-6">
           <div class="jumbotron">
+            <form name="namingForm" class="form-inline">
+              <label for="day">D.O.B</label>
+              <input type="number" id="day" placeholder="DD" name="day" class="form-control offset-1 col-3 col-md-2">
+              <input type="number" id="month" placeholder="MM" name="month" class="form-control offset-md-1 col-3 col-sm-2">
+              <input type="number" id="year" placeholder="YY" name="year" class="form-control offset-md-1 col-3 col-sm-2">
+            </form>
 
           </div>
         </div>
