--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
               <input type="number" id="day" placeholder="DD" name="day" class="form-control offset-1 col-3 col-md-2">
               <input type="number" id="month" placeholder="MM" name="month" class="form-control offset-md-1 col-3 col-sm-2">
               <input type="number" id="year" placeholder="YY" name="year" class="form-control offset-md-1 col-3 col-sm-2">
+              <label for="day" class="myDay">Gender</label>
+              <input type="radio" id="male" class="offset-1" name="gender">
+              <label for="male" class="myDay offset">Male</label>
+              <input type="radio" id="female" class="offset-1" name="gender">
+              <label for="female" class="myDay offset">Female</label>
+
             </form>
 
           </div>
