add another row and column for the pop-up card

--- a/index.html
+++ b/index.html
@@ -58,9 +58,36 @@
 
               </div>
               <button type="submit" class="btn btn-success offset-sm-5 offset-5 offset-lg-5" id="button" onclick="validate()">Submit</button>
-
             </form>
+          </div>
+        </div>
 
+        <div class="col-12 col-sm-6 man" id="man-icon">
+          <div class="jumbotron">
+            <div class="row">
+              <div class="col-4">
+                <img src="images/man-icon.jpg" alt="Man Photo">
+              </div>
+              <div class="col-6">
+                <div class="row">
+                  <p id="siku-day">Day: Wednesday</p>
+                </div>
+                <div class="row">
+                  <p id="man-akan">Akan: Kwaku</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 lady" id="lady">
+          <div class="jumbotron">
+            <div class="row">
+              <div class="col-3">
+                <img src="images/lady-icon.jpg" alt="Lady Photo"
+              </div>
+            </div>
           </div>
         </div>
       </div>
