add last column

--- a/index.html
+++ b/index.html
@@ -81,12 +81,23 @@
             </div>
           </div>
         </div>
+
         <div class="col-12 col-sm-6 lady" id="lady">
           <div class="jumbotron">
             <div class="row">
               <div class="col-3">
-                <img src="images/lady-icon.jpg" alt="Lady Photo"
+                <img src="images/lady-icon.jpg" alt="Lady Photo">
               </div>
+              <div class="col-6">
+                <div class="row">
+                  <p id="lady-day">Day: Wednesday</p>
+                </div>
+                <div class="row">
+                  <p id="lady-akan">Akan: Kwaku</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
             </div>
           </div>
         </div>
