--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akan Find Me</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/index.css" rel="stylesheet">
     <link href="images/akan-sm-bg.jpg"   rel="shortcut icon">
-    <script src="js/index.js"></script>
-  </head>
-  <body>
+    
+</head>
+<body>
     <div class="navbar">
       <img src="images/kentenavbar.jpg" alt="">
     </div>
@@ -37,11 +37,11 @@
               <input type="number" id="day" placeholder="DD" name="day" class="form-control offset-1 col-3 col-md-2">
               <input type="number" id="month" placeholder="MM" name="month" class="form-control offset-md-1 col-3 col-sm-2">
               <input type="number" id="year" placeholder="YY" name="year" class="form-control offset-md-1 col-3 col-sm-2">
-              <label for="day" class="myDay">Gender</label>
+              <label for="day" class="my-5">Gender</label>
               <input type="radio" id="male" class="offset-1" name="gender">
-              <label for="male" class="myDay offset">Male</label>
+              <label for="male" class="my-5 offset">Male</label>
               <input type="radio" id="female" class="offset-1" name="gender">
-              <label for="female" class="myDay offset">Female</label>
+              <label for="female" class="my-5 offset">Female</label>
               <div class="alert alert-danger" role="alert" id="danger-notif">
                 Provide all the required info.
               </div>
@@ -104,6 +104,6 @@
       </div>
 
     </div>
-   
-  </body>
+    <script src="js/index.js"></script>
+</body>
 </html>
