change the id lady to girl

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akan Find Me</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/index.css" rel="stylesheet">
-    <link href="images/akan-sm-bg.jpg"   rel="shortcut icon">
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="Images/akan-sm-bg.jpg"   rel="shortcut icon">
     
 </head>
 <body>
     <div class="navbar">
-      <img src="images/kentenavbar.jpg" alt="">
+      <img src="Images/kentenavbar.jpg" alt="">
     </div>
     <div class="container">
       <div class="jumbotron">
@@ -45,7 +45,7 @@
               <div class="alert alert-danger" role="alert" id="danger-notif">
                 Provide all the required info.
               </div>
-              <div class="alert alert-danger offset-sm-1" role="alert" id="danger-notif">
+              <div class="alert alert-danger offset-sm-1" role="alert" id="gender-notif">
                 Make sure you have selected gender.
               </div>
               <div class="alert alert-danger offset-sm-1" role="alert" id="day-notif">
@@ -57,16 +57,16 @@
               <div class="alert alert-danger offset-sm-1" role="alert" id="year-notif">
 
               </div>
-              <button type="submit" class="btn btn-success offset-sm-5 offset-5 offset-lg-5" id="button" onclick="validate()">Submit</button>
+              <button type="button" class="btn btn-success offset-sm-5 offset-5 offset-lg-5" id="button" onclick="validate()">Submit</button>
             </form>
           </div>
         </div>
 
-        <div class="col-12 col-sm-6 man" id="man-icon">
+        <div class="col-12 col-sm-6 man" id="man">
           <div class="jumbotron">
             <div class="row">
               <div class="col-4">
-                <img src="images/man-icon.jpg" alt="Man Photo">
+                <img src="./Images/man-icon.jpg" alt="Man Photo">
               </div>
               <div class="col-6">
                 <div class="row">
@@ -82,11 +82,11 @@
           </div>
         </div>
 
-        <div class="col-12 col-sm-6 lady" id="lady">
+        <div class="col-12 col-sm-6 girl" id="girl">
           <div class="jumbotron">
             <div class="row">
               <div class="col-3">
-                <img src="images/lady-icon.jpg" alt="Lady Photo">
+                <img src="./Images/lady-icon.jpg" alt="Lady Photo">
               </div>
               <div class="col-6">
                 <div class="row">
@@ -104,6 +104,6 @@
       </div>
 
     </div>
-    <script src="js/index.js"></script>
+    <script src="js/script.js"></script> 
 </body>
 </html>
