--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 </head>
 <body>
     <div class="navbar">
+      <nav class="navbar navbar-expand-md py-1 navbar-light bg-dark">
+      <a class="navbar-brand" href="#"><strong>Akan Find Me</strong></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <img src="Images/kentenavbar.jpg" alt="">
+      </nav>
     </div>
     <div class="container">
       <div class="jumbotron">
         <p>
-          An <strong><em>Akan</em></strong> name in Ghanian naming culture is a name given to people according to the day of the week they were born.
+          An <strong><em>Akan</em></strong> name in Ghanian naming culture is a name given to people according to the day of the week they were born. <i>For Example</i> <strong>Male born on Sunday: Kwasi</strong>
         </p>
         <p>
           Enter your birthday (Date of Birth) details below to find out your Akan name...
@@ -25,23 +31,24 @@
 
       <div class="mid-title">
         <p>
-          <strong>Get to know your Akan name:</strong>
+          <strong>Want to know your Akan name? Get Started:</strong>
         </p>
       </div>
 
       <div class="row">
         <div class="col-12 col-sm-6">
-          <div class="jumbotron">
+          <div class="fieldset">
             <form name="namingForm" class="form-inline">
               <label for="day">D.O.B</label>
               <input type="number" id="day" placeholder="DD" name="day" class="form-control offset-1 col-3 col-md-2">
               <input type="number" id="month" placeholder="MM" name="month" class="form-control offset-md-1 col-3 col-sm-2">
               <input type="number" id="year" placeholder="YY" name="year" class="form-control offset-md-1 col-3 col-sm-2">
-              <label for="day" class="my-5">Gender</label>
+
+              <label for="day" class="mb-5">Gender</label>
               <input type="radio" id="male" class="offset-1" name="gender">
-              <label for="male" class="my-5 offset">Male</label>
+              <label for="male" class="mb-5 offset">Male</label>
               <input type="radio" id="female" class="offset-1" name="gender">
-              <label for="female" class="my-5 offset">Female</label>
+              <label for="female" class="mbs-5 offset">Female</label>
               <div class="alert alert-danger" role="alert" id="danger-notif">
                 Provide all the required info.
               </div>
@@ -63,7 +70,7 @@
         </div>
 
         <div class="col-12 col-sm-6 man" id="man">
-          <div class="jumbotron">
+          <div class="fieldset">
             <div class="row">
               <div class="col-4">
                 <img src="./Images/man-icon.jpg" alt="Man Photo">
