change jumbotron to fieldset class on the form

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="col-12 col-sm-6 man" id="man">
-          <div class="fieldset">
+          <div class="jumbotron">
             <div class="row">
               <div class="col-4">
                 <img src="./Images/man-icon.jpg" alt="Man Photo">
