--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akan Find Me</title>
+    <title>Akan Calculator</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet">
     <link href="Images/akan-sm-bg.jpg"   rel="shortcut icon">
+    <link href="./Fonts/Pacifico-Regular.tff" type="text/css">
     
 </head>
 <body>
+  <h1><img src="Images/akan-sm-bg.jpg" width="20%" height="10%"><strong><span style="color: navy">KAN CALC</span></strong></h1>
     <div class="navbar">
       <nav class="navbar navbar-expand-md py-1 navbar-light bg-dark">
-      <a class="navbar-brand" href="#"><strong>Akan Find Me</strong></a>
+      <a class="navbar-brand" href="#"><strong>Akan Calculator</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,16 +41,16 @@
         <div class="col-12 col-sm-6">
           <div class="fieldset">
             <form name="namingForm" class="form-inline">
-              <label for="day">D.O.B</label>
+              <label for="day" class="my-5">D.O.B</label>
               <input type="number" id="day" placeholder="DD" name="day" class="form-control offset-1 col-3 col-md-2">
               <input type="number" id="month" placeholder="MM" name="month" class="form-control offset-md-1 col-3 col-sm-2">
               <input type="number" id="year" placeholder="YY" name="year" class="form-control offset-md-1 col-3 col-sm-2">
 
-              <label for="day" class="mb-5">Gender</label>
+              <label for="day" class="my-5">Gender</label>
               <input type="radio" id="male" class="offset-1" name="gender">
-              <label for="male" class="mb-5 offset">Male</label>
+              <label for="male" class="my-5 offset">Male</label>
               <input type="radio" id="female" class="offset-1" name="gender">
-              <label for="female" class="mbs-5 offset">Female</label>
+              <label for="female" class="my-5 offset">Female</label>
               <div class="alert alert-danger" role="alert" id="danger-notif">
                 Provide all the required info.
               </div>
@@ -72,7 +74,7 @@
         <div class="col-12 col-sm-6 man" id="man">
           <div class="jumbotron">
             <div class="row">
-              <div class="col-4">
+              <div class="col-3">
                 <img src="./Images/man-icon.jpg" alt="Man Photo">
               </div>
               <div class="col-6">
@@ -112,5 +114,7 @@
 
     </div>
     <script src="js/script.js"></script> 
+
 </body>
+<!-- <footer class="footer"></footer> -->
 </html>
