add footer bg image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-  <h1><img src="Images/akan-sm-bg.jpg" width="20%" height="10%"><strong><span style="color: navy">KAN CALC</span></strong></h1>
+  <h1><img src="Images/akan-sm-bg.jpg" width="15%" height="10%"><strong><span style="color: navy">KAN CALC</span></strong></h1>
     <div class="navbar">
       <nav class="navbar navbar-expand-md py-1 navbar-light bg-dark">
       <a class="navbar-brand" href="#"><strong>Akan Calculator</strong></a>
@@ -41,12 +41,12 @@
         <div class="col-12 col-sm-6">
           <div class="fieldset">
             <form name="namingForm" class="form-inline">
-              <label for="day" class="my-5">D.O.B</label>
+              <label for="day" class="mx-4"><strong>D.O.B</strong></label>
               <input type="number" id="day" placeholder="DD" name="day" class="form-control offset-1 col-3 col-md-2">
               <input type="number" id="month" placeholder="MM" name="month" class="form-control offset-md-1 col-3 col-sm-2">
               <input type="number" id="year" placeholder="YY" name="year" class="form-control offset-md-1 col-3 col-sm-2">
 
-              <label for="day" class="my-5">Gender</label>
+              <label for="day" class="mx-4"><strong>Gender</strong></label>
               <input type="radio" id="male" class="offset-1" name="gender">
               <label for="male" class="my-5 offset">Male</label>
               <input type="radio" id="female" class="offset-1" name="gender">
@@ -116,5 +116,7 @@
     <script src="js/script.js"></script> 
 
 </body>
-<!-- <footer class="footer"></footer> -->
+<footer class="footer">
+  <img src="./Images/kentenavbar.jpg">
+</footer>
 </html>
